Services/OpenCost/gettingStarted/opencost/opencost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencost-ingress
  namespace: opencost
  annotations:
    kubernetes.io/ingress.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web9090
spec:
  rules:
    - host: opencostui.0a0f122c.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: opencost
              port: 
                number: 9090
    - host: opencost.0a0f122c.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: opencost
              port: 
                number: 9003
